--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,40 @@
 .all {
-  width: 60%;
+  width: 64%;
   margin: 0 auto;
-  background-color: #fff;
 }
-
 body{
   background-color: #efefef;
-  font-size: 15px;
   color: #333;
+　margin: 0 auto;
 }
 
 hi,h2,h3,h4,h5 {
-  margin:  0 auto;
-  padding: 0;
+  margin: 0 0 50px 0;
+  padding: 8px;
 }
 
 header{
-  margin-top: 40px;
-  text-align: center;
+  margin: 0 auto;
 }
 
 .container{
-  width: 900px;
-  mmargin: 0 auto;
+  width: 920px;
+  margin: 0 auto;
 }
 
 .header-title-area{
-  margin-top: 10px;
-  margin-bottom: 100px;
+  line-height: 80px;
+  text-align: center;
+  background-color: #fff;
 }
 
 .logo{
   font-size: 32px;
+  text-align: center;
 }
 
 .header-navigation{
-  width: 96%;
+  width: 100%;
   background-color: #000;
   padding: 20px 0;
 }
@@ -60,12 +59,12 @@ header{
 
 .text-title {
   font-size: 24px;
-  margin-top: 0;
-  margin-bottom: 30px;
+  margin-top:10px;
+  margin-bottom: 40px;
 }
 
 .card-contents {
-  padding: 10px;
+  padding:25px;
   margin-bottom: 0 auto;
   background-color: #fff;
 }
@@ -76,7 +75,7 @@ header{
 }
 
 .right-contents {
-  width: 200px;
+  width: 300px;
   float: left;
 }
 
@@ -98,30 +97,49 @@ button{
   color:  #000;
 }
 
-.description2{
+.description2 {
   font-size:13px;
   color:  #000;
+  margin: 0 auto;
 }
 
-p{
+p {
   font-size: 12px;
   color: #000;
 }
 
-h3{
-  font-size: 14px;
+.text-title2{
+  font-size: 25px;
+  color: #000;
+}
+.title2 {
+  font-size: 16px;
   color: #000fff;
+  float: left;
+
+}
+.bar1 {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #efefef;
+  border: 0;
 }
 
+.bar2 {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #efefef;
+  border: 0;
+}
 .copyright {
   color: #777;
   text-align: center;
-
 }
 
 .main:after {
   clear: both;
   display: block;
   content: " ";
-
 }
