--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 .all {
-  width: 64%;
+  width: 65%;
+  height: 100%;
   margin: 0 auto;
+  background-color: #fff;
 }
 body{
   background-color: #efefef;
@@ -20,6 +22,7 @@ header{
 .container{
   width: 920px;
   margin: 0 auto;
+
 }
 
 .header-title-area{
@@ -64,13 +67,13 @@ header{
 }
 
 .card-contents {
-  padding:25px;
+  padding: 20px;
   margin-bottom: 0 auto;
   background-color: #fff;
 }
 
 .left-contents {
-  width: 600px;
+  width: 620px;
   float: left;
 }
 
@@ -133,6 +136,7 @@ p {
   background-color: #efefef;
   border: 0;
 }
+ 
 .copyright {
   color: #777;
   text-align: center;
