--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 .all {
-  width: 65%;
+  width: 64%;
   height: 100%;
   margin: 0 auto;
   background-color: #fff;
 }
+
 body{
   background-color: #efefef;
   color: #333;
@@ -12,28 +13,28 @@ body{
 
 hi,h2,h3,h4,h5 {
   margin: 0 0 50px 0;
-  padding: 8px;
+  padding: 20px;
 }
 
 header{
+  padding: 10px 0;
   margin: 0 auto;
 }
 
 .container{
   width: 920px;
   margin: 0 auto;
-
 }
 
 .header-title-area{
   line-height: 80px;
   text-align: center;
-  background-color: #fff;
 }
 
 .logo{
-  font-size: 32px;
+  font-size: 35px;
   text-align: center;
+  background-color: #fff;
 }
 
 .header-navigation{
@@ -61,62 +62,66 @@ header{
 }
 
 .text-title {
-  font-size: 24px;
+  font-size: 20px;
   margin-top:10px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .card-contents {
-  padding: 20px;
-  margin-bottom: 0 auto;
+  padding: 40px;
+  margin: 0 15px 0 0;
   background-color: #fff;
 }
 
 .left-contents {
-  width: 620px;
+  width: 600px;
   float: left;
 }
 
 .right-contents {
-  width: 300px;
+  width: 320px;
   float: left;
 }
 
 .staff-image {
+  padding: 0;
+  border: 2px solid #dcdcdc;
+  display: block;
   float: left;
 }
 
-button{
-  padding: 0px 0px;
-  border: 3px solid silver;
-}
 .title {
   font-size: 18px;
+  margin: 0 0 20px 1em;
   color: #000fff;
 }
 
 .description1 {
-  font-size: 14px;
+  font-size: 13px;
+  margin: 0 0 20px 2em;
   color:  #000;
 }
 
 .description2 {
-  font-size:13px;
+  font-size:12px;
   color:  #000;
-  margin: 0 auto;
+  margin: 0 0 30px 2em;
 }
 
 p {
   font-size: 12px;
-  color: #000;
+  margin: 0 0 10px 0;
 }
 
 .text-title2{
-  font-size: 25px;
+  font-size: 24px;
+  margin: 0 auto;
   color: #000;
 }
+
 .title2 {
-  font-size: 16px;
+  font-size: 15px;
+  margin: 0 0 30px 0;
   color: #000fff;
   float: left;
 
@@ -124,26 +129,28 @@ p {
 .bar1 {
   display: block;
   width: 100%;
-  height: 3px;
+  height: 2px;
   background-color: #efefef;
   border: 0;
 }
 
 .bar2 {
   display: block;
-  width: 100%;
-  height: 3px;
+  width: 90%;
+  height: 2px;
   background-color: #efefef;
   border: 0;
 }
- 
-.copyright {
-  color: #777;
-  text-align: center;
+
+footer{
+  clear:both;
+  width: 920px;
+  padding: 50px 0;
+  margin: 0 auto;
+  text-align:center;
+  background-color: #fff;
 }
 
-.main:after {
-  clear: both;
-  display: block;
-  content: " ";
+.copyright {
+  color: #777;
 }
