--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .all {
-  width: 64%;
+  width: 73%;
   height: 100%;
   margin: 0 auto;
   background-color: #fff;
@@ -32,7 +32,7 @@ header{
 }
 
 .logo{
-  font-size: 35px;
+  font-size: 40px;
   text-align: center;
   background-color: #fff;
 }
@@ -83,34 +83,44 @@ header{
   float: left;
 }
 
-.staff-image {
-  padding: 0;
-  border: 2px solid #dcdcdc;
-  display: block;
+.staff-image1 {
+  margin: 0 8px 0 0;
+  border: 3px solid #dcdcdc;
   float: left;
 }
 
+img {
+   margin: 0 auto;
+   display: block;
+   vertical-align: bottom;
+}
 .title {
   font-size: 18px;
-  margin: 0 0 20px 1em;
+  margin: 0 0 20px 10px;
   color: #000fff;
 }
 
 .description1 {
   font-size: 13px;
-  margin: 0 0 20px 2em;
+  margin: 0 0 20px 10px;
   color:  #000;
 }
 
 .description2 {
-  font-size:12px;
+  font-size:13px;
   color:  #000;
-  margin: 0 0 30px 2em;
+  margin: 0 0 30px 10px;
 }
 
 p {
   font-size: 12px;
   margin: 0 0 10px 0;
+}
+
+.staff-image2 {
+  margin: 0 5px 0 0;
+  border: 3px solid #dcdcdc;
+  float: left;
 }
 
 .text-title2{
@@ -120,11 +130,9 @@ p {
 }
 
 .title2 {
-  font-size: 15px;
-  margin: 0 0 30px 0;
+  font-size: 13px;
+  margin: 0 10px 25px 0;
   color: #000fff;
-  float: left;
-
 }
 .bar1 {
   display: block;
